@@ -1355,4 +1355,5 @@ s/BU_FNMATCH_/BU_PATH_MATCH/g
         renamed for consistency, simplified [7.27]
 s/bu_path_canonicalize[[:space:]]*\(([^,]*)/bu_realpath(\1, NULL/g
 	duplicate functionality consolidated to bu_realpath() [7.27] 
-                                                    
+s/gqa(.*)-p/gqa\1-p ""/g
+	gqa now takes a prefix for plot file output
